Fix #alert hidden by #color

--- a/server/public/stylesheets/chat.less
+++ b/server/public/stylesheets/chat.less
@@ -108,7 +108,7 @@
       position: absolute;
       top: 0; left: 0; right: 0;
       min-height: 45px;
-      z-index: 15;
+      z-index: 100;
       padding: .4em .6em .4em;
       background-color: @cl-neutral;
       .ft-opensans-bold;
